# control_seminar

./: README.md
inverted_pend/: CMakeLists.txt  package.xml
inverted_pend/include/controller/: inverted_pend_controller.cpp  inverted_pend_controller.hpp  pid_controller.cpp  pid_controller.hpp  state_feedback_controller.cpp  state_feedback_controller.hpp
inverted_pend/include/plant_dynamics/: ode_rk4_custom.hpp  plant_dynamics.cpp  plant_dynamics.hpp
inverted_pend/include/ros_wrapper/: ros_controller.cpp  ros_controller.hpp  ros_plant_wrapper.cpp  ros_plant_wrapper.hpp
inverted_pend/include/state_def/: state_def.hpp
inverted_pend/launch/: inverted_pend.launch  inverted_pend_PID.launch  inverted_pend_SFC.launch
inverted_pend/msg/: State_msg.msg
inverted_pend/src/: controller_node.cpp  plant_node.cpp
